// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить адрес 1`] = `
<span
  className="OfferAmpSellerInfoAddress"
>
  Льва Толстого, 16
</span>
`;

exports[`должен отрендерить адрес и регион 1`] = `
<span
  className="OfferAmpSellerInfoAddress"
>
  Москва, Льва Толстого, 16
</span>
`;
